# text_align_rust

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
src/: helper_functions.rs  lib.rs
