[package]
name = "text_align"
version = "0.2.0"
authors = ["Joseph T Lyons <JosephTLyons@gmail.com>"]
edition = "2021"
description = "A crate that provides a single trait for various alignments of text"
license = "GPL-3.0-only"
repository = "https://github.com/JosephTLyons/text_align_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
regex = "1.5.4"
